fixed horizontal scroller issue

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,11 +1,15 @@
 .app-container {
   display: flex;
+  flex-direction: column;
   height: 100vh;
+  width: 100%;
+  overflow-x: hidden;
 }
 
 h2 {
   margin-bottom: 20px;
 }
+
 :root {
   --main-bg-color: #f0e6ff; /* A light mix of blue, pink, and purple */
 }
